force-app/main/default/objects/E_Linea_de_Proyecto__e/E_Linea_de_Proyecto__e.object-meta.xml
<CustomObject>
    <description>Evento para integración con SAP, del sObject Linea_de_Proyecto__c</description>
    <label>Linea de Proyecto</label>
    <pluralLabel>Lineas de Proyecto</pluralLabel>
</CustomObject>