force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Clave_de_Periodificacion__c.field-meta.xml
<CustomField>
    <fullName>Clave_de_Periodificacion__c</fullName>
    <label>Clave de Periodificacion</label>
    <length>7</length>
    <type>Text</type>
</CustomField>