force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Codigo_SAP_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_Ejecucion__c</fullName>
    <label>Codigo SAP Ejecucion</label>
    <length>32</length>
    <type>Text</type>
</CustomField>