force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Codigo_SAP_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_Preventa__c</fullName>
    <label>Codigo SAP Preventa</label>
    <length>32</length>
    <type>Text</type>
</CustomField>