force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Coste_estimado__c.field-meta.xml
<CustomField>
    <fullName>Coste_estimado__c</fullName>
    <label>Coste estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>