force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/eOperacion__c.field-meta.xml
<CustomField>
    <fullName>eOperacion__c</fullName>
    <label>eOperacion</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>