force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Fecha_de_facturacion_3__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_facturacion_3__c</fullName>
    <label>Fecha de facturacion 3</label>
    <type>Date</type>
</CustomField>