force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin__c</fullName>
    <label>Fecha Fin</label>
    <type>Date</type>
</CustomField>