force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>