force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Hito_1__c.field-meta.xml
<CustomField>
    <fullName>Hito_1__c</fullName>
    <label>Hito 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>