force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Hito_2__c.field-meta.xml
<CustomField>
    <fullName>Hito_2__c</fullName>
    <label>Hito 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>