force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Hito_3__c.field-meta.xml
<CustomField>
    <fullName>Hito_3__c</fullName>
    <label>Hito 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>