force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Id_std__c.field-meta.xml
<CustomField>
    <fullName>Id_std__c</fullName>
    <label>Id_std</label>
    <length>255</length>
    <type>Text</type>
</CustomField>