force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>