force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Margen_real__c.field-meta.xml
<CustomField>
    <fullName>Margen_real__c</fullName>
    <label>Margen real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>