force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>