force-app/main/default/objects/E_Linea_de_Proyecto__e/fields/Reintento__c.field-meta.xml
<CustomField>
    <fullName>Reintento__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Acumulador de reintentos, cuenta as veces que ha sido procesado.</description>
    <label>Reintento</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>